[project]
name = "lda-lobbying"
version = "0.1.0"
description = "Lobbying Disclosure Act data connector"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "deltalake>=0.17.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
